working on IE issue. updated base.css

--- a/docroot/sites/all/themes/mta/base.css
+++ b/docroot/sites/all/themes/mta/base.css
@@ -290,7 +290,7 @@ th {
 	margin-bottom:5px;
 	padding-bottom:5px;
 	border-bottom: 1px solid #D0D0D0;
-	width:580px;
+	width:600px;
 	}
 #edit-submitted-subwaytrips input,
 #edit-submitted-lirr input,
@@ -327,7 +327,7 @@ th {
 	margin-bottom:5px;
 	padding-bottom:5px;
 	border-bottom: 1px solid #D0D0D0;
-	width:580px;
+	width:600px;
 	}
 #edit-submitted-subwaysatisfied input,
 #edit-submitted-lirrsatisfied input,
